--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <body>
     <div class="theme__box">
       <button type="button" class="sun-moon__theme">
+        <div class="shadow"></div>
         <div class="s-m_bac__l"></div>
+        <!-- <img src="./img/sun-moon_theme_svg/Star1.svg" >
+        <img src="./img/sun-moon_theme_svg/Star2.svg" >
+        <img src="./img/sun-moon_theme_svg/Star3.svg" >
+        <img src="./img/sun-moon_theme_svg/Star4.svg" >
+        <img src="./img/sun-moon_theme_svg/Star5.svg" > -->
         <div class="switch">
           <img class="switch__s" src="./img/sun-moon_theme_svg/Switch-sun.svg"></img>
           <img class="switch__m" src="./img/sun-moon_theme_svg/Switch-moon.svg"></img>
