--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>theme toggle</title>
-    <link href="./styles/styles.css" rel="stylesheet" />
     <link href="./styles/sun-moon_theme_styles.css" rel="stylesheet" />
+    <link href="./styles/sun-moon_forest_styles.css" rel="stylesheet" />
+    <link href="./styles/styles.css" rel="stylesheet" />
   </head>
   <body class="transition">
     <div class="theme__box">
@@ -15,6 +16,10 @@
           <img class="switch__s" src="./img/sun-moon_theme_svg/Switch-sun.svg"></img>
           <img class="switch__m" src="./img/sun-moon_theme_svg/Switch-moon.svg"></img>
         </div>
+      </button>
+      <button class="sun-moon-forest">
+        <div class="s-m_bac__forest"></div>
+        <div class="forest__switch"></div>
       </button>
     </div>
 
