--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="theme__box">
       <button type="button" class="sun-moon__theme">
         <div class="s-m_bac__l"></div>
+        <div class="s-m_stars"></div>
+        <div class="s-m_clouds"></div>
         <div class="switch">
           <img class="switch__s" src="./img/sun-moon_theme_svg/Switch-sun.svg"></img>
           <img class="switch__m" src="./img/sun-moon_theme_svg/Switch-moon.svg"></img>
